--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rating App</title>
+  <title>Cosmic Rating App</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="rating-container">
-    <h1>Rate This Product</h1>
+    <h1>🌌 Rate This Cosmic Product 🌟</h1>
     <div class="stars">
       <span class="star" data-value="1">☆</span>
       <span class="star" data-value="2">☆</span>
@@ -17,12 +17,13 @@
       <span class="star" data-value="5">☆</span>
     </div>
     <div id="rating-info">
-      <p>Average Rating: <span id="average-rating">0</span>/5</p>
-      <p>Total Ratings: <span id="total-ratings">0</span></p>
+      <p>🌠 Average Rating: <span id="average-rating">0</span>/5</p>
+      <p>🪐 Total Ratings: <span id="total-ratings">0</span></p>
     </div>
-    <button id="submit-button">Submit Rating</button>
+    <button id="submit-button">🚀 Submit Rating</button>
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
