--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cosmic Rating App</title>
+  <title>Rate My Landlord</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="rating-container">
-    <h1>🌌 Rate This Cosmic Product 🌟</h1>
+    <h1>🌌 Rate Here 🌟</h1>
     <div class="stars">
       <span class="star" data-value="1">☆</span>
       <span class="star" data-value="2">☆</span>
@@ -27,3 +27,19 @@
 </body>
 </html>
 
+<!-- Comment Section -->
+    <div class="comment-section">
+      <h2>💬 Leave a Comment</h2>
+      <textarea id="comment-box" rows="4" placeholder="Share your thoughts about this Landlord..."></textarea>
+      <button id="submit-comment">Submit Comment</button>
+      <div id="comments-list">
+        <!-- Comments will be displayed here -->
+      </div>
+    </div>
+
+    <button id="submit-button">🚀 Submit Rating</button>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
