--- a/index.html
+++ b/index.html
@@ -42,3 +42,59 @@
   <script src="script.js"></script>
 </body>
 </html>
+<!-- Landlord Data Section -->
+    <div class="landlord-section">
+      <h1>🏠 Landlord Information</h1>
+
+      <!-- Add Landlord Form -->
+      <div class="form-container">
+        <h2>Add New Landlord</h2>
+        <form id="add-landlord-form">
+          <input type="text" id="landlord-name" placeholder="Landlord Name" required />
+          <input type="text" id="landlord-phone" placeholder="Phone Number" required />
+          <input type="email" id="landlord-email" placeholder="Email Address" required />
+          <input type="text" id="landlord-property" placeholder="Property Name" required />
+          <button type="submit">Add Landlord</button>
+        </form>
+      </div>
+
+      <!-- Landlord List -->
+      <div class="landlord-list">
+        <h2>Landlord Directory</h2>
+        <ul id="landlord-list"></ul>
+      </div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
+
+<!-- Landlord Data Section -->
+    <div class="landlord-section">
+      <h1>🏠 Landlord Information</h1>
+
+      <!-- Add Landlord Form -->
+      <div class="form-container">
+        <h2>Add New Landlord</h2>
+        <form id="add-landlord-form">
+          <input type="text" id="landlord-name" placeholder="Landlord Name" required />
+          <input type="text" id="landlord-phone" placeholder="Phone Number" required />
+          <input type="email" id="landlord-email" placeholder="Email Address" required />
+          <input type="text" id="landlord-property" placeholder="Property Name" required />
+          <button type="submit">Add Landlord</button>
+        </form>
+      </div>
+
+      <!-- Landlord List -->
+      <div class="landlord-list">
+        <h2>Landlord Directory</h2>
+        <ul id="landlord-list"></ul>
+      </div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
+
