--- a/index.html
+++ b/index.html
@@ -98,3 +98,14 @@
 </body>
 </html>
 
+  <!-- Landlord List -->
+      <div class="landlord-list">
+        <h2>Landlord Directory</h2>
+        <ul id="landlord-list"></ul>
+      </div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
