--- a/index.html
+++ b/index.html
@@ -142,3 +142,42 @@
   <script src="script.js"></script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Landlord Rating App</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="app-container">
+    <!-- Navigation Tabs -->
+    <div class="nav">
+      <button id="tab-rating" class="tab-button active">Rate a Landlord</button>
+      <button id="tab-landlord-directory" class="tab-button">Landlord Directory</button>
+      <button id="tab-add" class="tab-button">Add a Landlord</button>
+    </div>
+
+    <!-- Rating Tab -->
+    <div id="rating-tab" class="tab-content active">
+      <h2>Rate Your Landlord</h2>
+      <!-- Rating and Comment form goes here -->
+    </div>
+
+    <!-- Landlord Directory Tab -->
+    <div id="landlord-directory-tab" class="tab-content">
+      <h2>Landlord Directory</h2>
+      <ul id="landlord-list-ul"></ul>
+    </div>
+
+    <!-- Add Landlord Tab -->
+    <div id="add-landlord-tab" class="tab-content">
+      <h2>Add a Landlord</h2>
+      <!-- Add landlord form goes here -->
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
