--- a/index.html
+++ b/index.html
@@ -7,150 +7,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="rating-container">
-    <h1>🌌 Rate Here 🌟</h1>
-    <div class="stars">
-      <span class="star" data-value="1">☆</span>
-      <span class="star" data-value="2">☆</span>
-      <span class="star" data-value="3">☆</span>
-      <span class="star" data-value="4">☆</span>
-      <span class="star" data-value="5">☆</span>
-    </div>
-    <div id="rating-info">
-      <p>🌠 Average Rating: <span id="average-rating">0</span>/5</p>
-      <p>🪐 Total Ratings: <span id="total-ratings">0</span></p>
-    </div>
-    <button id="submit-button">🚀 Submit Rating</button>
-  </div>
-
-  <script src="script.js"></script>
-</body>
-</html>
-<!-- Comment Section -->
-    <div class="comment-section">
-      <h2>💬 Leave a Comment</h2>
-      <textarea id="comment-box" rows="4" placeholder="Share your thoughts about this Landlord..."></textarea>
-      <button id="submit-comment">Submit Comment</button>
-      <div id="comments-list">
-        <!-- Comments will be displayed here -->
-      </div>
-    </div>
-
-    <button id="submit-button">🚀 Submit Rating</button>
-  </div>
-
-  <script src="script.js"></script>
-</body>
-</html>
-<!-- Landlord Data Section -->
-    <div class="landlord-section">
-      <h1>🏠 Landlord Information</h1>
-
-      <!-- Add Landlord Form -->
-      <div class="form-container">
-        <h2>Add New Landlord</h2>
-        <form id="add-landlord-form">
-          <input type="text" id="landlord-name" placeholder="Landlord Name" required />
-          <input type="text" id="landlord-phone" placeholder="Phone Number" required />
-          <input type="email" id="landlord-email" placeholder="Email Address" required />
-          <input type="text" id="landlord-property" placeholder="Property Name" required />
-          <button type="submit">Add Landlord</button>
-        </form>
-      </div>
-
-      <!-- Landlord List -->
-      <div class="landlord-list">
-        <h2>Landlord Directory</h2>
-        <ul id="landlord-list"></ul>
-      </div>
-    </div>
-  </div>
-
-  <script src="script.js"></script>
-</body>
-</html>
-
-<!-- Landlord Data Section -->
-    <div class="landlord-section">
-      <h1>🏠 Landlord Information</h1>
-
-      <!-- Add Landlord Form -->
-      <div class="form-container">
-        <h2>Add New Landlord</h2>
-        <form id="add-landlord-form">
-          <input type="text" id="landlord-name" placeholder="Landlord Name" required />
-          <input type="text" id="landlord-phone" placeholder="Phone Number" required />
-          <input type="email" id="landlord-email" placeholder="Email Address" required />
-          <input type="text" id="landlord-property" placeholder="Property Name" required />
-          <button type="submit">Add Landlord</button>
-        </form>
-      </div>
-
-      <!-- Landlord List -->
-      <div class="landlord-list">
-        <h2>Landlord Directory</h2>
-        <ul id="landlord-list"></ul>
-      </div>
-    </div>
-  </div>
-
-  <script src="script.js"></script>
-</body>
-</html>
-
-  <!-- Landlord List -->
-      <div class="landlord-list">
-        <h2>Landlord Directory</h2>
-        <ul id="landlord-list"></ul>
-      </div>
-    </div>
-  </div>
-
-  <script src="script.js"></script>
-</body>
-</html>
- <!-- Landlord Data Section -->
-    <div class="landlord-section">
-      <h1>🏠 Landlord Information</h1>
-      <!-- Tabs -->
-      <div class="tabs">
-        <button class="tab-button active" id="tab-list">Landlord Directory</button>
-        <button class="tab-button" id="tab-add">Add Landlord</button>
-      </div>
-
-      <!-- Landlord List (Tab 1) -->
-      <div class="tab-content" id="landlord-list">
-        <h2>Landlord Directory</h2>
-        <ul id="landlord-list-ul"></ul>
-      </div>
-
-      <!-- Add Landlord Form (Tab 2) -->
-      <div class="tab-content" id="add-landlord-form-container">
-        <h2>Add New Landlord</h2>
-        <form id="add-landlord-form">
-          <input type="text" id="landlord-name" placeholder="Landlord Name" required />
-          <input type="text" id="landlord-phone" placeholder="Phone Number" required />
-          <input type="email" id="landlord-email" placeholder="Email Address" required />
-          <input type="text" id="landlord-property" placeholder="Property Name" required />
-          <input type="file" id="landlord-photo" accept="image/*" />
-          <button type="submit">Add Landlord</button>
-        </form>
-      </div>
-    </div>
-  </div>
-
-  <script src="script.js"></script>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Landlord Rating App</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
   <div class="app-container">
     <!-- Navigation Tabs -->
     <div class="nav">
@@ -161,20 +17,46 @@
 
     <!-- Rating Tab -->
     <div id="rating-tab" class="tab-content active">
-      <h2>Rate Your Landlord</h2>
-      <!-- Rating and Comment form goes here -->
+      <h2>🌌 Rate Here 🌟</h2>
+      <div class="stars">
+        <span class="star" data-value="1">☆</span>
+        <span class="star" data-value="2">☆</span>
+        <span class="star" data-value="3">☆</span>
+        <span class="star" data-value="4">☆</span>
+        <span class="star" data-value="5">☆</span>
+      </div>
+      <div id="rating-info">
+        <p>🌠 Average Rating: <span id="average-rating">0</span>/5</p>
+        <p>🪐 Total Ratings: <span id="total-ratings">0</span></p>
+      </div>
+      <button id="submit-button">🚀 Submit Rating</button>
+
+      <!-- Comment Section -->
+      <div class="comment-section">
+        <h2>💬 Leave a Comment</h2>
+        <textarea id="comment-box" rows="4" placeholder="Share your thoughts about this Landlord..."></textarea>
+        <button id="submit-comment">Submit Comment</button>
+        <div id="comments-list"></div>
+      </div>
     </div>
 
     <!-- Landlord Directory Tab -->
     <div id="landlord-directory-tab" class="tab-content">
-      <h2>Landlord Directory</h2>
+      <h2>🏠 Landlord Directory</h2>
       <ul id="landlord-list-ul"></ul>
     </div>
 
     <!-- Add Landlord Tab -->
     <div id="add-landlord-tab" class="tab-content">
-      <h2>Add a Landlord</h2>
-      <!-- Add landlord form goes here -->
+      <h2>🏠 Add a New Landlord</h2>
+      <form id="add-landlord-form">
+        <input type="text" id="landlord-name" placeholder="Landlord Name" required />
+        <input type="text" id="landlord-phone" placeholder="Phone Number" required />
+        <input type="email" id="landlord-email" placeholder="Email Address" required />
+        <input type="text" id="landlord-property" placeholder="Property Name" required />
+        <input type="file" id="landlord-photo" accept="image/*" />
+        <button type="submit">Add Landlord</button>
+      </form>
     </div>
   </div>
 
